# Foodlog

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DASHBOARD.md  DEPLOY_WHEN_BACK.md  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  serve.json
.beads/: issues.jsonl  metadata.json
body_sim/: README.md  __init__.py  adaptation.py  config.py  evaluate.py  glycogen.py  keytel.py  model.py  partition.py  pipeline.py  plotting.py  rmr.py  simulate.py  sodium.py  tef.py  validation.py
doc/: HEALTH_DATA.md  README.md
docs/: health-data-discovery-pixel-watch.md
foodlog/: config.py
foodlog/api/: app.py  auth.py  dependencies.py  oauth.py
foodlog/clients/: fatsecret.py  google_health.py  usda.py
foodlog/db/: database.py  models.py
foodlog/models/: schemas.py
foodlog/services/: google_token.py  health_sync.py  logging.py  nutrition.py  oauth.py  search.py
foodlog/static/: manifest.webmanifest  sw.js
foodlog/templates/: base.html
mcp_server/: server.py
notebooks/: 02_data_pipeline.ipynb  03_descriptive_eda.ipynb  04_hall_baseline.ipynb  06_scenario_simulator.ipynb  07_live_tracking.ipynb
scripts/: probe_pixel_watch_types.py  probe_report.json
tests/: conftest.py  test_api.py  test_clients.py  test_dashboard.py  test_dashboard_render.py  test_db.py  test_dependencies.py  test_google_health_client.py  test_google_token.py  test_health_oauth_routes.py  test_health_sync.py  test_mcp.py  test_movement_render.py  test_oauth_api.py  test_oauth_service.py  test_pwa.py  test_schemas.py  test_services.py  test_timeline.py
(+71 files in other folders)
